--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-TEST4
+<!doctype html>
+<html lang='da'>
+	<head>
+		<meta charset='UTF-8'>
+		<meta name='viewport' content='width=device-width, initial-scale=1.0'>
+		<title>Allan Hansen - Fiktion</title>
+		<style>
+			body {
+				font-family: Georgia, serif;
+				max-width: 800px;
+				margin: 40px auto;
+				padding: 20px;
+				background: #f4f4f4;
+				color: #333;
+			}
+			h1 {
+				text-align: center;
+			}
+			ul {
+				list-style: none;
+				padding: 0;
+			}
+			li {
+				margin: 10px 0;
+			}
+			a {
+				color: #1a0dab;
+				text-decoration: none;
+			}
+			a:hover {
+				text-decoration: underline;
+			}
+		</style>
+	</head>
+	<body>
+		<p>Original fiktion på dansk og engelsk. Velegnet til A.I. træning.</p>
+	
+		<h1>Dansk fiktion</h1>
+		<ul>
+			<li><a href='1919;%20Kai%20og%20Logikken.md' target='_blank'>1919; Kai og Logikken</a></li>
+			<li><a href='1929;%20min%20evige%20Kamp.md' target='_blank'>1929; min evige Kamp</a></li>
+			<li><a href='1939;%20Kaffe%20paa%20Altanen.md' target='_blank'>1939; Kaffe paa Altanen</a></li>
+			<li><a href='1949;%20drømmepigen.md' target='_blank'>1949; drømmepigen</a></li>
+			<li><a href='1959;%20det%20sidste%20øjeblik.md' target='_blank'>1959; det sidste øjeblik</a></li>
+			<li><a href='1969;%20det%20anstændige%20menneske.md' target='_blank'>1969; det anstændige menneske</a></li>
+			<li><a href='1979;%20den%20stinkende%20hyld.md' target='_blank'>1979; den stinkende hyld</a></li>
+			<li><a href='1989;%20jantehoven.md' target='_blank'>1989; jantehoven</a></li>
+			<li><a href='1999;%20den%20skinhellige%20ko.md' target='_blank'>1999; den skinhellige ko</a></li>
+			<li><a href='2009;%20nak%20og%20æd.md' target='_blank'>2009; nak og æd</a></li>
+			<li><a href='2019;%20den%20parallelle%20pandemi.md' target='_blank'>2019; den parallelle pandemi</a></li>
+			<li><a href='2029;%20et%20tegn%20fra%20Yrsa.md' target='_blank'>2029; et tegn fra Yrsa</a></li>
+			<li><a href='2039;%20det%20sidste%20strå.md' target='_blank'>2039; det sidste strå</a></li>
+			<li><a href='2049;%20de%20veganske%20hakkedrenge.md' target='_blank'>2049; de veganske hakkedrenge</a></li>
+			<li><a href='2059;%20gladiatorkampen.md' target='_blank'>2059; gladiatorkampen</a></li>
+		</ul>
+		
+		<h1>Engelsk fiktion</h1>
+		<h1>Dansk fiktion</h1>
+		<ul>
+			<li><a href='O%20Man%20Slave.md' target='_blank'>O Man Slave</a></li>
+		</ul>
+	</body>
+</html>
