--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 				color: #333;
 			}
 			h1 {
-				text-align: center;
+				margin-top: 29px;
+				font-size: 120%;
 			}
 			ul {
 				list-style: none;
@@ -55,7 +56,6 @@
 		</ul>
 		
 		<h1>Engelsk fiktion</h1>
-		<h1>Dansk fiktion</h1>
 		<ul>
 			<li><a href='O%20Man%20Slave.md' target='_blank'>O Man Slave</a></li>
 		</ul>
