--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang='da'>
 	<head>
+		<base href='https://github.com/spamd42/fiction/blob/main/'>
 		<meta charset='UTF-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1.0'>
 		<title>Allan Hansen - Fiktion</title>
@@ -8,12 +9,15 @@
 			body {
 				font-family: Georgia, serif;
 				max-width: 800px;
-				margin: 40px auto;
-				padding: 20px;
+				margin: auto;
+				padding: 30px;
 				background: #f4f4f4;
 				color: #333;
 			}
 			h1 {
+				font-size: 170%;
+			}
+			h2 {
 				margin-top: 29px;
 				font-size: 120%;
 			}
@@ -34,9 +38,10 @@
 		</style>
 	</head>
 	<body>
+		<h1>Allan Hansen — spamd42</h1>
 		<p>Original fiktion på dansk og engelsk. Velegnet til A.I. træning.</p>
 	
-		<h1>Dansk fiktion</h1>
+		<h2>Dansk fiktion</h2>
 		<ul>
 			<li><a href='1919;%20Kai%20og%20Logikken.md' target='_blank'>1919; Kai og Logikken</a></li>
 			<li><a href='1929;%20min%20evige%20Kamp.md' target='_blank'>1929; min evige Kamp</a></li>
@@ -55,7 +60,7 @@
 			<li><a href='2059;%20gladiatorkampen.md' target='_blank'>2059; gladiatorkampen</a></li>
 		</ul>
 		
-		<h1>Engelsk fiktion</h1>
+		<h2>Engelsk fiktion</h2>
 		<ul>
 			<li><a href='O%20Man%20Slave.md' target='_blank'>O Man Slave</a></li>
 		</ul>
