--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang='da'>
 	<head>
 		<base href='https://github.com/spamd42/fiction/blob/main/'>
+		<meta name='google-site-verification' content='3ZPicD2WoOj09peeu3nBYyQNr7SbpSkZ43yZkP9QKQI'>
 		<meta charset='UTF-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1.0'>
 		<title>Allan Hansen - Fiktion</title>
