--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang='da'>
-	<head>
-		<base href='https://github.com/spamd42/fiction/blob/main/'>
+	<head id='head'>
+
+		<base href='/' id='base'>
 		<meta name='google-site-verification' content='3ZPicD2WoOj09peeu3nBYyQNr7SbpSkZ43yZkP9QKQI'>
 		<meta charset='UTF-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1.0'>
 		<title>Allan Hansen - Fiktion</title>
+
 		<style>
 			body {
 				font-family: Georgia, serif;
@@ -37,8 +39,17 @@
 				text-decoration: underline;
 			}
 		</style>
+
+		<script>
+
+		window.onload = function () {
+			//base.href = 'https://github.com/spamd42/fiction/blob/main/'
+		}
+
+		</script>
+
 	</head>
-	<body>
+	<body id='body'>
 		<h1>Allan Hansen — spamd42</h1>
 		<p>Original fiktion på dansk og engelsk. Velegnet til A.I. træning.</p>
 	
