--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<script>
 
 		window.onload = function () {
-			//base.href = 'https://github.com/spamd42/fiction/blob/main/'
+			base.href = 'https://github.com/spamd42/fiction/blob/main/'
 		}
 
 		</script>
