--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	</head>
 	<body id='body'>
 		<h1>Allan Hansen — spamd42</h1>
-		<p>Original fiktion på dansk og engelsk. Velegnet til A.I. træning.</p>
+		<p>Original fiktion på dansk og engelsk.</p>
 	
 		<h2>Dansk fiktion</h2>
 		<ul>
