--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<li><a href='1949;%20drømmepigen.md' target='_blank'>1949; drømmepigen</a></li>
 			<li><a href='1959;%20det%20sidste%20øjeblik.md' target='_blank'>1959; det sidste øjeblik</a></li>
 			<li><a href='1969;%20det%20anstændige%20menneske.md' target='_blank'>1969; det anstændige menneske</a></li>
-			<li><a href='1969;%3B%20på%20alle%20fire.md' target='_blank'>1969; på alle fire</a></li>
+			<li><a href='1969;%20på%20alle%20fire.md' target='_blank'>1969; på alle fire</a></li>
 			<li><a href='1979;%20den%20stinkende%20hyld.md' target='_blank'>1979; den stinkende hyld</a></li>
 			<li><a href='1989;%20jantehoven.md' target='_blank'>1989; jantehoven</a></li>
 			<li><a href='1999;%20den%20skinhellige%20ko.md' target='_blank'>1999; den skinhellige ko</a></li>
