--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	
 		<h2>Dansk fiktion</h2>
 		<ul>
-			<li><a href='1899%3B%20Br%C3%B8dre%20i%20Kj%C3%B8d%20og%20Blod.md' target='_blank'>1899; Brødre i Kjød og Blod </a></li>
+			<li><a href='1899;%20Brødre%20i%20Kjød%20og%20Blod.md' target='_blank'>1899; Brødre i Kjød og Blod </a></li>
 			<li><a href='1919;%20Kai%20og%20Logikken.md' target='_blank'>1919; Kai og Logikken</a></li>
 			<li><a href='1929;%20min%20evige%20Kamp.md' target='_blank'>1929; min evige Kamp</a></li>
 			<li><a href='1939;%20Kaffe%20paa%20Altanen.md' target='_blank'>1939; Kaffe paa Altanen</a></li>
